yac.output
Terminals which are not used

   KEYWORD_BREAK
   KEYWORD_CHAN
   KEYWORD_SELECT
   KEYWORD_MAP
   KEYWORD_INTERFACE
   KEYWORD_GO
   KEYWORD_FALLTHROUGH
   KEYWORD_ELSE
   KEYWORD_DEFER
   KEYWORD_GOTO
   KEYWORD_STRUCT
   KEYWORD_CONTINUE
   KEYWORD_RETURN
   KEYWORD_IF
   NotPackage
   NotParen
   PreferToRightParen


State 45 conflicts: 1 shift/reduce
State 109 conflicts: 5 shift/reduce
State 151 conflicts: 1 reduce/reduce
State 153 conflicts: 5 shift/reduce
State 172 conflicts: 5 shift/reduce
State 210 conflicts: 5 shift/reduce


Grammar

    0 $accept: SourceFile $end

    1 Expression: Expression LOGICAL_OR Expression
    2           | Expression LOGICAL_AND Expression
    3           | Expression RelationalOperation Expression
    4           | Expression AddOperation Expression
    5           | Expression MultipyOperation Expression
    6           | UnaryExpression

    7 ExpressionList: Expression
    8               | ExpressionList ',' Expression

    9 RelationalOperation: REL_EQUAL
   10                    | REL_NEQUAL
   11                    | REL_LT
   12                    | REL_LEQ
   13                    | REL_GT
   14                    | REL_GEQ

   15 AddOperation: '+'
   16             | '-'
   17             | '|'
   18             | '^'

   19 MultipyOperation: '*'
   20                 | '/'
   21                 | '%'
   22                 | LSHIFT
   23                 | RSHIFT
   24                 | '&'
   25                 | AMPXOR

   26 UnaryOperation: '+'
   27               | '-'
   28               | '!'
   29               | '^'
   30               | '*'
   31               | '&'

   32 AssignOperation: ADD_ASSIGN
   33                | SUB_ASSIGN
   34                | OR_ASSIGN
   35                | XOR_ASSIGN
   36                | MUL_ASSIGN
   37                | DIV_ASSIGN
   38                | MOD_ASSIGN
   39                | AND_ASSIGN
   40                | LSHIFT_ASSIGN
   41                | RSHIFT_ASSIGN
   42                | AMPXOR_ASSIGN

   43 UnaryExpression: CHANNEL_ASSIGN UnaryExpression
   44                | UnaryOperation UnaryExpression
   45                | PrimaryExpression

   46 PrimaryExpression: Operand
   47                  | PrimaryExpression Index

   48 Index: '[' Expression ']'

   49 Operand: Literal
   50        | OperandName
   51        | '(' Expression ')'
   52        | P_NIL
   53        | P_BOOL

   54 Literal: BasicLiteral

   55 BasicLiteral: INT_LITERAL
   56             | FLOAT_LITERAL
   57             | STRING_LITERAL

   58 OperandName: IDENTIFIER
   59            | P_FUNCTION

   60 CodeBlock: '{' Statements '}'

   61 Statements: Statements Statement
   62           | ';'

   63 Statement: SimpleStatement
   64          | Declaration
   65          | ForStatement
   66          | SwitchStatement

   67 SimpleStatement: Expression
   68                | IncrementDecrement
   69                | Assignment
   70                | ShortDeclaration

   71 IncrementDecrement: Expression INC_ASSIGN
   72                   | Expression DEC_ASSIGN

   73 Assignment: ExpressionList '=' ExpressionList
   74           | Expression AssignOperation Expression

   75 ShortDeclaration: IdentifierList SHORT_DECLARATION ExpressionList

   76 SourceFile: PackageClause ImportDeclarations TopLevelDeclarations

   77 PackageClause: KEYWORD_PACKAGE PackageName
   78              | ';'

   79 PackageName: IDENTIFIER

   80 ImportDeclarations: ImportDeclaration ImportDeclarations
   81                   | ';'

   82 ImportDeclaration: KEYWORD_IMPORT ImportSpecification
   83                  | KEYWORD_IMPORT '(' ImportSpecificationList ')'

   84 ImportSpecificationList: ImportSpecification ImportSpecificationList2

   85 ImportSpecificationList2: ImportSpecification ImportSpecificationList2
   86                         | ';'

   87 ImportSpecification: STRING_LITERAL
   88                    | '.' STRING_LITERAL
   89                    | PackageName STRING_LITERAL

   90 Type: TypeName
   91     | '(' Type ')'

   92 TypeName: P_TYPE
   93         | QualifiedID

   94 QualifiedID: PackageName '.' IDENTIFIER

   95 TopLevelDeclarations: TopLevelDeclaration TopLevelDeclarations
   96                     | ';'

   97 TopLevelDeclaration: Declaration
   98                    | KEYWORD_FUNC KEYWORD_MAIN '(' ')' CodeBlock

   99 Declaration: ConstDeclaration
  100            | TypeDeclaration
  101            | VariableDeclaration

  102 ConstDeclaration: KEYWORD_CONST ConstSpecification
  103                 | KEYWORD_CONST '(' ConstSpecifications ')'

  104 ConstSpecifications: ConstSpecification
  105                    | ConstSpecifications ConstSpecification

  106 ConstSpecification: IdentifierList ConstIdList

  107 ConstIdList: PreConstIdList '=' ExpressionList

  108 PreConstIdList: Type
  109               | ';'

  110 TypeDeclaration: KEYWORD_TYPE TypeSpecifications

  111 TypeSpecifications: TypeSpecification
  112                   | '(' TypeSpecificationList ')'

  113 TypeSpecificationList: TypeSpecification TypeSpecificationList
  114                      | ';'

  115 TypeSpecification: AliasDeclaration
  116                  | TypeDefinition

  117 AliasDeclaration: IDENTIFIER '=' Type

  118 TypeDefinition: IDENTIFIER Type

  119 VariableDeclaration: KEYWORD_VAR VariableSpecifications
  120                    | KEYWORD_VAR '(' VariableSpecifications ')'

  121 VariableSpecifications: VariableSpecification
  122                       | VariableSpecifications VariableSpecification

  123 VariableSpecification: IdentifierList VariableIdList

  124 VariableIdList: Type VariableIdListType

  125 VariableIdListType: '=' ExpressionList
  126                   | ';'

  127 IdentifierList: IDENTIFIER
  128               | IdentifierList ',' IDENTIFIER

  129 ForStatement: KEYWORD_FOR ForClauseParent CodeBlock

  130 ForClauseParent: ForCondition
  131                | ForClause
  132                | RangeClause
  133                | ';'

  134 ForCondition: Expression

  135 ForClause: ForClauseInit ';' ForClauseCondition ';' ForClauseUpdation

  136 ForClauseInit: InitializeStatement
  137              | ';'

  138 ForClauseCondition: Expression

  139 ForClauseUpdation: UpdationStatement
  140                  | ';'

  141 InitializeStatement: SimpleStatement

  142 UpdationStatement: SimpleStatement

  143 RangeClause: PreForRange KEYWORD_RANGE Expression

  144 PreForRange: ExpressionList '='
  145            | IdentifierList SHORT_DECLARATION
  146            | ';'

  147 SwitchStatement: ExpressionSwitchStatement
  148                | TypeSwitchStatement

  149 ExpressionSwitchStatement: KEYWORD_SWITCH SimpleStatement ';' Expression '{' ExpressionCaseClause '}'

  150 ExpressionCaseClause: ExpressionSwitchCase ':' Statements

  151 ExpressionSwitchCase: KEYWORD_CASE ExpressionList
  152                     | KEYWORD_DEFAULT

  153 TypeSwitchStatement: KEYWORD_SWITCH SimpleStatement ';' TypeSwitchGuard '{' TypeCaseClause '}'

  154 TypeSwitchGuard: IDENTIFIER SHORT_DECLARATION PrimaryExpression '.' '(' KEYWORD_TYPE ')'

  155 TypeCaseClause: TypeSwitchCase ':' Statements

  156 TypeSwitchCase: KEYWORD_CASE TypeList
  157               | KEYWORD_DEFAULT

  158 TypeList: Type ',' Type


Terminals, with rules where they appear

$end (0) 0
'!' (33) 28
'%' (37) 21
'&' (38) 24 31
'(' (40) 51 83 91 98 103 112 120 154
')' (41) 51 83 91 98 103 112 120 154
'*' (42) 19 30
'+' (43) 15 26
',' (44) 8 128 158
'-' (45) 16 27
'.' (46) 88 94 154
'/' (47) 20
':' (58) 150 155
';' (59) 62 78 81 86 96 109 114 126 133 135 137 140 146 149 153
'=' (61) 73 107 117 125 144
'[' (91) 48
']' (93) 48
'^' (94) 18 29
'{' (123) 60 149 153
'|' (124) 17
'}' (125) 60 149 153
error (256)
ADD_ASSIGN (258) 32
SUB_ASSIGN (259) 33
MUL_ASSIGN (260) 36
DIV_ASSIGN (261) 37
LSHIFT_ASSIGN (262) 40
RSHIFT_ASSIGN (263) 41
AND_ASSIGN (264) 39
OR_ASSIGN (265) 34
XOR_ASSIGN (266) 35
MOD_ASSIGN (267) 38
INC_ASSIGN (268) 71
DEC_ASSIGN (269) 72
AMPXOR_ASSIGN (270) 42
SHORT_DECLARATION (271) 75 145 154
LOGICAL_AND (272) 2
LOGICAL_OR (273) 1
REL_EQUAL (274) 9
REL_NEQUAL (275) 10
REL_GEQ (276) 14
REL_LEQ (277) 12
AMPXOR (278) 25
LSHIFT (279) 22
RSHIFT (280) 23
CHANNEL_ASSIGN (281) 43
REL_GT (282) 13
REL_LT (283) 11
KEYWORD_DEFAULT (284) 152 157
KEYWORD_BREAK (285)
KEYWORD_CHAN (286)
KEYWORD_SELECT (287)
KEYWORD_FUNC (288) 98
KEYWORD_MAP (289)
KEYWORD_INTERFACE (290)
KEYWORD_GO (291)
KEYWORD_FALLTHROUGH (292)
KEYWORD_ELSE (293)
KEYWORD_DEFER (294)
KEYWORD_GOTO (295)
KEYWORD_CONST (296) 102 103
KEYWORD_STRUCT (297)
KEYWORD_CASE (298) 151 156
KEYWORD_PACKAGE (299) 77
KEYWORD_CONTINUE (300)
KEYWORD_SWITCH (301) 149 153
KEYWORD_TYPE (302) 110 154
KEYWORD_IMPORT (303) 82 83
KEYWORD_RANGE (304) 143
KEYWORD_VAR (305) 119 120
KEYWORD_FOR (306) 129
KEYWORD_RETURN (307)
KEYWORD_IF (308)
KEYWORD_MAIN (309) 98
P_NIL (310) 52
IDENTIFIER (311) 58 79 94 117 118 127 128 154
FLOAT_LITERAL (312) 56
STRING_LITERAL (313) 57 87 88 89
P_TYPE (314) 92
P_BOOL (315) 53
P_FUNCTION (316) 59
INT_LITERAL (317) 55
P_UNARY (318)
NotPackage (319)
NotParen (320)
PreferToRightParen (321)


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
Expression (88)
    on left: 1 2 3 4 5 6, on right: 1 2 3 4 5 7 8 48 51 67 71 72 74
    134 138 143 149
ExpressionList (89)
    on left: 7 8, on right: 8 73 75 107 125 144 151
RelationalOperation (90)
    on left: 9 10 11 12 13 14, on right: 3
AddOperation (91)
    on left: 15 16 17 18, on right: 4
MultipyOperation (92)
    on left: 19 20 21 22 23 24 25, on right: 5
UnaryOperation (93)
    on left: 26 27 28 29 30 31, on right: 44
AssignOperation (94)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 74
UnaryExpression (95)
    on left: 43 44 45, on right: 6 43 44
PrimaryExpression (96)
    on left: 46 47, on right: 45 47 154
Index (97)
    on left: 48, on right: 47
Operand (98)
    on left: 49 50 51 52 53, on right: 46
Literal (99)
    on left: 54, on right: 49
BasicLiteral (100)
    on left: 55 56 57, on right: 54
OperandName (101)
    on left: 58 59, on right: 50
CodeBlock (102)
    on left: 60, on right: 98 129
Statements (103)
    on left: 61 62, on right: 60 61 150 155
Statement (104)
    on left: 63 64 65 66, on right: 61
SimpleStatement (105)
    on left: 67 68 69 70, on right: 63 141 142 149 153
IncrementDecrement (106)
    on left: 71 72, on right: 68
Assignment (107)
    on left: 73 74, on right: 69
ShortDeclaration (108)
    on left: 75, on right: 70
SourceFile (109)
    on left: 76, on right: 0
PackageClause (110)
    on left: 77 78, on right: 76
PackageName (111)
    on left: 79, on right: 77 89 94
ImportDeclarations (112)
    on left: 80 81, on right: 76 80
ImportDeclaration (113)
    on left: 82 83, on right: 80
ImportSpecificationList (114)
    on left: 84, on right: 83
ImportSpecificationList2 (115)
    on left: 85 86, on right: 84 85
ImportSpecification (116)
    on left: 87 88 89, on right: 82 84 85
Type (117)
    on left: 90 91, on right: 91 108 117 118 124 158
TypeName (118)
    on left: 92 93, on right: 90
QualifiedID (119)
    on left: 94, on right: 93
TopLevelDeclarations (120)
    on left: 95 96, on right: 76 95
TopLevelDeclaration (121)
    on left: 97 98, on right: 95
Declaration (122)
    on left: 99 100 101, on right: 64 97
ConstDeclaration (123)
    on left: 102 103, on right: 99
ConstSpecifications (124)
    on left: 104 105, on right: 103 105
ConstSpecification (125)
    on left: 106, on right: 102 104 105
ConstIdList (126)
    on left: 107, on right: 106
PreConstIdList (127)
    on left: 108 109, on right: 107
TypeDeclaration (128)
    on left: 110, on right: 100
TypeSpecifications (129)
    on left: 111 112, on right: 110
TypeSpecificationList (130)
    on left: 113 114, on right: 112 113
TypeSpecification (131)
    on left: 115 116, on right: 111 113
AliasDeclaration (132)
    on left: 117, on right: 115
TypeDefinition (133)
    on left: 118, on right: 116
VariableDeclaration (134)
    on left: 119 120, on right: 101
VariableSpecifications (135)
    on left: 121 122, on right: 119 120 122
VariableSpecification (136)
    on left: 123, on right: 121 122
VariableIdList (137)
    on left: 124, on right: 123
VariableIdListType (138)
    on left: 125 126, on right: 124
IdentifierList (139)
    on left: 127 128, on right: 75 106 123 128 145
ForStatement (140)
    on left: 129, on right: 65
ForClauseParent (141)
    on left: 130 131 132 133, on right: 129
ForCondition (142)
    on left: 134, on right: 130
ForClause (143)
    on left: 135, on right: 131
ForClauseInit (144)
    on left: 136 137, on right: 135
ForClauseCondition (145)
    on left: 138, on right: 135
ForClauseUpdation (146)
    on left: 139 140, on right: 135
InitializeStatement (147)
    on left: 141, on right: 136
UpdationStatement (148)
    on left: 142, on right: 139
RangeClause (149)
    on left: 143, on right: 132
PreForRange (150)
    on left: 144 145 146, on right: 143
SwitchStatement (151)
    on left: 147 148, on right: 66
ExpressionSwitchStatement (152)
    on left: 149, on right: 147
ExpressionCaseClause (153)
    on left: 150, on right: 149
ExpressionSwitchCase (154)
    on left: 151 152, on right: 150
TypeSwitchStatement (155)
    on left: 153, on right: 148
TypeSwitchGuard (156)
    on left: 154, on right: 153
TypeCaseClause (157)
    on left: 155, on right: 153
TypeSwitchCase (158)
    on left: 156 157, on right: 155
TypeList (159)
    on left: 158, on right: 156


state 0

    0 $accept: . SourceFile $end

    KEYWORD_PACKAGE  shift, and go to state 1
    ';'              shift, and go to state 2

    SourceFile     go to state 3
    PackageClause  go to state 4


state 1

   77 PackageClause: KEYWORD_PACKAGE . PackageName

    IDENTIFIER  shift, and go to state 5

    PackageName  go to state 6


state 2

   78 PackageClause: ';' .

    $default  reduce using rule 78 (PackageClause)


state 3

    0 $accept: SourceFile . $end

    $end  shift, and go to state 7


state 4

   76 SourceFile: PackageClause . ImportDeclarations TopLevelDeclarations

    KEYWORD_IMPORT  shift, and go to state 8
    ';'             shift, and go to state 9

    ImportDeclarations  go to state 10
    ImportDeclaration   go to state 11


state 5

   79 PackageName: IDENTIFIER .

    $default  reduce using rule 79 (PackageName)


state 6

   77 PackageClause: KEYWORD_PACKAGE PackageName .

    $default  reduce using rule 77 (PackageClause)


state 7

    0 $accept: SourceFile $end .

    $default  accept


state 8

   82 ImportDeclaration: KEYWORD_IMPORT . ImportSpecification
   83                  | KEYWORD_IMPORT . '(' ImportSpecificationList ')'

    IDENTIFIER      shift, and go to state 5
    STRING_LITERAL  shift, and go to state 12
    '('             shift, and go to state 13
    '.'             shift, and go to state 14

    PackageName          go to state 15
    ImportSpecification  go to state 16


state 9

   81 ImportDeclarations: ';' .

    $default  reduce using rule 81 (ImportDeclarations)


state 10

   76 SourceFile: PackageClause ImportDeclarations . TopLevelDeclarations

    KEYWORD_FUNC   shift, and go to state 17
    KEYWORD_CONST  shift, and go to state 18
    KEYWORD_TYPE   shift, and go to state 19
    KEYWORD_VAR    shift, and go to state 20
    ';'            shift, and go to state 21

    TopLevelDeclarations  go to state 22
    TopLevelDeclaration   go to state 23
    Declaration           go to state 24
    ConstDeclaration      go to state 25
    TypeDeclaration       go to state 26
    VariableDeclaration   go to state 27


state 11

   80 ImportDeclarations: ImportDeclaration . ImportDeclarations

    KEYWORD_IMPORT  shift, and go to state 8
    ';'             shift, and go to state 9

    ImportDeclarations  go to state 28
    ImportDeclaration   go to state 11


state 12

   87 ImportSpecification: STRING_LITERAL .

    $default  reduce using rule 87 (ImportSpecification)


state 13

   83 ImportDeclaration: KEYWORD_IMPORT '(' . ImportSpecificationList ')'

    IDENTIFIER      shift, and go to state 5
    STRING_LITERAL  shift, and go to state 12
    '.'             shift, and go to state 14

    PackageName              go to state 15
    ImportSpecificationList  go to state 29
    ImportSpecification      go to state 30


state 14

   88 ImportSpecification: '.' . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 31


state 15

   89 ImportSpecification: PackageName . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 32


state 16

   82 ImportDeclaration: KEYWORD_IMPORT ImportSpecification .

    $default  reduce using rule 82 (ImportDeclaration)


state 17

   98 TopLevelDeclaration: KEYWORD_FUNC . KEYWORD_MAIN '(' ')' CodeBlock

    KEYWORD_MAIN  shift, and go to state 33


state 18

  102 ConstDeclaration: KEYWORD_CONST . ConstSpecification
  103                 | KEYWORD_CONST . '(' ConstSpecifications ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 35

    ConstSpecification  go to state 36
    IdentifierList      go to state 37


state 19

  110 TypeDeclaration: KEYWORD_TYPE . TypeSpecifications

    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 39

    TypeSpecifications  go to state 40
    TypeSpecification   go to state 41
    AliasDeclaration    go to state 42
    TypeDefinition      go to state 43


state 20

  119 VariableDeclaration: KEYWORD_VAR . VariableSpecifications
  120                    | KEYWORD_VAR . '(' VariableSpecifications ')'

    IDENTIFIER  shift, and go to state 34
    '('         shift, and go to state 44

    VariableSpecifications  go to state 45
    VariableSpecification   go to state 46
    IdentifierList          go to state 47


state 21

   96 TopLevelDeclarations: ';' .

    $default  reduce using rule 96 (TopLevelDeclarations)


state 22

   76 SourceFile: PackageClause ImportDeclarations TopLevelDeclarations .

    $default  reduce using rule 76 (SourceFile)


state 23

   95 TopLevelDeclarations: TopLevelDeclaration . TopLevelDeclarations

    KEYWORD_FUNC   shift, and go to state 17
    KEYWORD_CONST  shift, and go to state 18
    KEYWORD_TYPE   shift, and go to state 19
    KEYWORD_VAR    shift, and go to state 20
    ';'            shift, and go to state 21

    TopLevelDeclarations  go to state 48
    TopLevelDeclaration   go to state 23
    Declaration           go to state 24
    ConstDeclaration      go to state 25
    TypeDeclaration       go to state 26
    VariableDeclaration   go to state 27


state 24

   97 TopLevelDeclaration: Declaration .

    $default  reduce using rule 97 (TopLevelDeclaration)


state 25

   99 Declaration: ConstDeclaration .

    $default  reduce using rule 99 (Declaration)


state 26

  100 Declaration: TypeDeclaration .

    $default  reduce using rule 100 (Declaration)


state 27

  101 Declaration: VariableDeclaration .

    $default  reduce using rule 101 (Declaration)


state 28

   80 ImportDeclarations: ImportDeclaration ImportDeclarations .

    $default  reduce using rule 80 (ImportDeclarations)


state 29

   83 ImportDeclaration: KEYWORD_IMPORT '(' ImportSpecificationList . ')'

    ')'  shift, and go to state 49


state 30

   84 ImportSpecificationList: ImportSpecification . ImportSpecificationList2

    IDENTIFIER      shift, and go to state 5
    STRING_LITERAL  shift, and go to state 12
    ';'             shift, and go to state 50
    '.'             shift, and go to state 14

    PackageName               go to state 15
    ImportSpecificationList2  go to state 51
    ImportSpecification       go to state 52


state 31

   88 ImportSpecification: '.' STRING_LITERAL .

    $default  reduce using rule 88 (ImportSpecification)


state 32

   89 ImportSpecification: PackageName STRING_LITERAL .

    $default  reduce using rule 89 (ImportSpecification)


state 33

   98 TopLevelDeclaration: KEYWORD_FUNC KEYWORD_MAIN . '(' ')' CodeBlock

    '('  shift, and go to state 53


state 34

  127 IdentifierList: IDENTIFIER .

    $default  reduce using rule 127 (IdentifierList)


state 35

  103 ConstDeclaration: KEYWORD_CONST '(' . ConstSpecifications ')'

    IDENTIFIER  shift, and go to state 34

    ConstSpecifications  go to state 54
    ConstSpecification   go to state 55
    IdentifierList       go to state 37


state 36

  102 ConstDeclaration: KEYWORD_CONST ConstSpecification .

    $default  reduce using rule 102 (ConstDeclaration)


state 37

  106 ConstSpecification: IdentifierList . ConstIdList
  128 IdentifierList: IdentifierList . ',' IDENTIFIER

    IDENTIFIER  shift, and go to state 5
    P_TYPE      shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58
    ';'         shift, and go to state 59

    PackageName     go to state 60
    Type            go to state 61
    TypeName        go to state 62
    QualifiedID     go to state 63
    ConstIdList     go to state 64
    PreConstIdList  go to state 65


state 38

  117 AliasDeclaration: IDENTIFIER . '=' Type
  118 TypeDefinition: IDENTIFIER . Type

    IDENTIFIER  shift, and go to state 5
    P_TYPE      shift, and go to state 56
    '('         shift, and go to state 57
    '='         shift, and go to state 66

    PackageName  go to state 60
    Type         go to state 67
    TypeName     go to state 62
    QualifiedID  go to state 63


state 39

  112 TypeSpecifications: '(' . TypeSpecificationList ')'

    IDENTIFIER  shift, and go to state 38
    ';'         shift, and go to state 68

    TypeSpecificationList  go to state 69
    TypeSpecification      go to state 70
    AliasDeclaration       go to state 42
    TypeDefinition         go to state 43


state 40

  110 TypeDeclaration: KEYWORD_TYPE TypeSpecifications .

    $default  reduce using rule 110 (TypeDeclaration)


state 41

  111 TypeSpecifications: TypeSpecification .

    $default  reduce using rule 111 (TypeSpecifications)


state 42

  115 TypeSpecification: AliasDeclaration .

    $default  reduce using rule 115 (TypeSpecification)


state 43

  116 TypeSpecification: TypeDefinition .

    $default  reduce using rule 116 (TypeSpecification)


state 44

  120 VariableDeclaration: KEYWORD_VAR '(' . VariableSpecifications ')'

    IDENTIFIER  shift, and go to state 34

    VariableSpecifications  go to state 71
    VariableSpecification   go to state 46
    IdentifierList          go to state 47


state 45

  119 VariableDeclaration: KEYWORD_VAR VariableSpecifications .
  122 VariableSpecifications: VariableSpecifications . VariableSpecification

    IDENTIFIER  shift, and go to state 34

    IDENTIFIER  [reduce using rule 119 (VariableDeclaration)]
    $default    reduce using rule 119 (VariableDeclaration)

    VariableSpecification  go to state 72
    IdentifierList         go to state 47


state 46

  121 VariableSpecifications: VariableSpecification .

    $default  reduce using rule 121 (VariableSpecifications)


state 47

  123 VariableSpecification: IdentifierList . VariableIdList
  128 IdentifierList: IdentifierList . ',' IDENTIFIER

    IDENTIFIER  shift, and go to state 5
    P_TYPE      shift, and go to state 56
    '('         shift, and go to state 57
    ','         shift, and go to state 58

    PackageName     go to state 60
    Type            go to state 73
    TypeName        go to state 62
    QualifiedID     go to state 63
    VariableIdList  go to state 74


state 48

   95 TopLevelDeclarations: TopLevelDeclaration TopLevelDeclarations .

    $default  reduce using rule 95 (TopLevelDeclarations)


state 49

   83 ImportDeclaration: KEYWORD_IMPORT '(' ImportSpecificationList ')' .

    $default  reduce using rule 83 (ImportDeclaration)


state 50

   86 ImportSpecificationList2: ';' .

    $default  reduce using rule 86 (ImportSpecificationList2)


state 51

   84 ImportSpecificationList: ImportSpecification ImportSpecificationList2 .

    $default  reduce using rule 84 (ImportSpecificationList)


state 52

   85 ImportSpecificationList2: ImportSpecification . ImportSpecificationList2

    IDENTIFIER      shift, and go to state 5
    STRING_LITERAL  shift, and go to state 12
    ';'             shift, and go to state 50
    '.'             shift, and go to state 14

    PackageName               go to state 15
    ImportSpecificationList2  go to state 75
    ImportSpecification       go to state 52


state 53

   98 TopLevelDeclaration: KEYWORD_FUNC KEYWORD_MAIN '(' . ')' CodeBlock

    ')'  shift, and go to state 76


state 54

  103 ConstDeclaration: KEYWORD_CONST '(' ConstSpecifications . ')'
  105 ConstSpecifications: ConstSpecifications . ConstSpecification

    IDENTIFIER  shift, and go to state 34
    ')'         shift, and go to state 77

    ConstSpecification  go to state 78
    IdentifierList      go to state 37


state 55

  104 ConstSpecifications: ConstSpecification .

    $default  reduce using rule 104 (ConstSpecifications)


state 56

   92 TypeName: P_TYPE .

    $default  reduce using rule 92 (TypeName)


state 57

   91 Type: '(' . Type ')'

    IDENTIFIER  shift, and go to state 5
    P_TYPE      shift, and go to state 56
    '('         shift, and go to state 57

    PackageName  go to state 60
    Type         go to state 79
    TypeName     go to state 62
    QualifiedID  go to state 63


state 58

  128 IdentifierList: IdentifierList ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 80


state 59

  109 PreConstIdList: ';' .

    $default  reduce using rule 109 (PreConstIdList)


state 60

   94 QualifiedID: PackageName . '.' IDENTIFIER

    '.'  shift, and go to state 81


state 61

  108 PreConstIdList: Type .

    $default  reduce using rule 108 (PreConstIdList)


state 62

   90 Type: TypeName .

    $default  reduce using rule 90 (Type)


state 63

   93 TypeName: QualifiedID .

    $default  reduce using rule 93 (TypeName)


state 64

  106 ConstSpecification: IdentifierList ConstIdList .

    $default  reduce using rule 106 (ConstSpecification)


state 65

  107 ConstIdList: PreConstIdList . '=' ExpressionList

    '='  shift, and go to state 82


state 66

  117 AliasDeclaration: IDENTIFIER '=' . Type

    IDENTIFIER  shift, and go to state 5
    P_TYPE      shift, and go to state 56
    '('         shift, and go to state 57

    PackageName  go to state 60
    Type         go to state 83
    TypeName     go to state 62
    QualifiedID  go to state 63


state 67

  118 TypeDefinition: IDENTIFIER Type .

    $default  reduce using rule 118 (TypeDefinition)


state 68

  114 TypeSpecificationList: ';' .

    $default  reduce using rule 114 (TypeSpecificationList)


state 69

  112 TypeSpecifications: '(' TypeSpecificationList . ')'

    ')'  shift, and go to state 84


state 70

  113 TypeSpecificationList: TypeSpecification . TypeSpecificationList

    IDENTIFIER  shift, and go to state 38
    ';'         shift, and go to state 68

    TypeSpecificationList  go to state 85
    TypeSpecification      go to state 70
    AliasDeclaration       go to state 42
    TypeDefinition         go to state 43


state 71

  120 VariableDeclaration: KEYWORD_VAR '(' VariableSpecifications . ')'
  122 VariableSpecifications: VariableSpecifications . VariableSpecification

    IDENTIFIER  shift, and go to state 34
    ')'         shift, and go to state 86

    VariableSpecification  go to state 72
    IdentifierList         go to state 47


state 72

  122 VariableSpecifications: VariableSpecifications VariableSpecification .

    $default  reduce using rule 122 (VariableSpecifications)


state 73

  124 VariableIdList: Type . VariableIdListType

    ';'  shift, and go to state 87
    '='  shift, and go to state 88

    VariableIdListType  go to state 89


state 74

  123 VariableSpecification: IdentifierList VariableIdList .

    $default  reduce using rule 123 (VariableSpecification)


state 75

   85 ImportSpecificationList2: ImportSpecification ImportSpecificationList2 .

    $default  reduce using rule 85 (ImportSpecificationList2)


state 76

   98 TopLevelDeclaration: KEYWORD_FUNC KEYWORD_MAIN '(' ')' . CodeBlock

    '{'  shift, and go to state 90

    CodeBlock  go to state 91


state 77

  103 ConstDeclaration: KEYWORD_CONST '(' ConstSpecifications ')' .

    $default  reduce using rule 103 (ConstDeclaration)


state 78

  105 ConstSpecifications: ConstSpecifications ConstSpecification .

    $default  reduce using rule 105 (ConstSpecifications)


state 79

   91 Type: '(' Type . ')'

    ')'  shift, and go to state 92


state 80

  128 IdentifierList: IdentifierList ',' IDENTIFIER .

    $default  reduce using rule 128 (IdentifierList)


state 81

   94 QualifiedID: PackageName '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 93


state 82

  107 ConstIdList: PreConstIdList '=' . ExpressionList

    CHANNEL_ASSIGN  shift, and go to state 94
    P_NIL           shift, and go to state 95
    IDENTIFIER      shift, and go to state 96
    FLOAT_LITERAL   shift, and go to state 97
    STRING_LITERAL  shift, and go to state 98
    P_BOOL          shift, and go to state 99
    P_FUNCTION      shift, and go to state 100
    INT_LITERAL     shift, and go to state 101
    '+'             shift, and go to state 102
    '-'             shift, and go to state 103
    '^'             shift, and go to state 104
    '*'             shift, and go to state 105
    '&'             shift, and go to state 106
    '('             shift, and go to state 107
    '!'             shift, and go to state 108

    Expression         go to state 109
    ExpressionList     go to state 110
    UnaryOperation     go to state 111
    UnaryExpression    go to state 112
    PrimaryExpression  go to state 113
    Operand            go to state 114
    Literal            go to state 115
    BasicLiteral       go to state 116
    OperandName        go to state 117


state 83

  117 AliasDeclaration: IDENTIFIER '=' Type .

    $default  reduce using rule 117 (AliasDeclaration)


state 84

  112 TypeSpecifications: '(' TypeSpecificationList ')' .

    $default  reduce using rule 112 (TypeSpecifications)


state 85

  113 TypeSpecificationList: TypeSpecification TypeSpecificationList .

    $default  reduce using rule 113 (TypeSpecificationList)


state 86

  120 VariableDeclaration: KEYWORD_VAR '(' VariableSpecifications ')' .

    $default  reduce using rule 120 (VariableDeclaration)


state 87

  126 VariableIdListType: ';' .

    $default  reduce using rule 126 (VariableIdListType)


state 88

  125 VariableIdListType: '=' . ExpressionList

    CHANNEL_ASSIGN  shift, and go to state 94
    P_NIL           shift, and go to state 95
    IDENTIFIER      shift, and go to state 96
    FLOAT_LITERAL   shift, and go to state 97
    STRING_LITERAL  shift, and go to state 98
    P_BOOL          shift, and go to state 99
    P_FUNCTION      shift, and go to state 100
    INT_LITERAL     shift, and go to state 101
    '+'             shift, and go to state 102
    '-'             shift, and go to state 103
    '^'             shift, and go to state 104
    '*'             shift, and go to state 105
    '&'             shift, and go to state 106
    '('             shift, and go to state 107
    '!'             shift, and go to state 108

    Expression         go to state 109
    ExpressionList     go to state 118
    UnaryOperation     go to state 111
    UnaryExpression    go to state 112
    PrimaryExpression  go to state 113
    Operand            go to state 114
    Literal            go to state 115
    BasicLiteral       go to state 116
    OperandName        go to state 117


state 89

  124 VariableIdList: Type VariableIdListType .

    $default  reduce using rule 124 (VariableIdList)


state 90

   60 CodeBlock: '{' . Statements '}'

    ';'  shift, and go to state 119

    Statements  go to state 120


state 91

   98 TopLevelDeclaration: KEYWORD_FUNC KEYWORD_MAIN '(' ')' CodeBlock .

    $default  reduce using rule 98 (TopLevelDeclaration)


state 92

   91 Type: '(' Type ')' .

    $default  reduce using rule 91 (Type)


state 93

   94 QualifiedID: PackageName '.' IDENTIFIER .

    $default  reduce using rule 94 (QualifiedID)


state 94

   43 UnaryExpression: CHANNEL_ASSIGN . UnaryExpression
